--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="quiz-container" id="home">
-        <h1>Welcome to the Quiz</h1>
+        <h1>Welcome to the Fauzan Quiz</h1>
         <button id="start-btn">Start Quiz</button>
     </div>
 
