--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Website</title>
+    <link rel="shortcut icon" type="x-icon" href="assets/logo.png">
+    <title>Quiz Math</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -11,7 +12,8 @@
 </head>
 <body>
     <div class="quiz-container" id="home">
-        <h1>Welcome to the Quiz Matematika</h1>
+        <h1>Quiz Matematika</h1>
+        <p>Teridiri dari 6 soal</p>
         <button id="start-btn">Start Quiz</button>
     </div>
 
