--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="quiz-container" id="home">
         <h1>Quiz Matematika</h1>
-        <p>Teridiri dari 10 soal</p>
+        <p>Terdiri dari 10 soal</p>
         <button id="start-btn">Start Quiz</button>
     </div>
 
