--- a/quiz.html
+++ b/quiz.html
@@ -39,7 +39,7 @@
       <p>Correct Answers: <span id="correct-answers"></span></p>
       <p>Incorrect Answers: <span id="incorrect-answers"></span></p>
       <p>Score Percentage: <span id="score-percentage"></span>%</p>
-      <a href="e-modul-mtk.vercel.app" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #007BFF; color: white; text-decoration: none; border-radius: 5px; font-size: 16px;">Kembali</a>
+      <a href="quiz.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #007BFF; color: white; text-decoration: none; border-radius: 5px; font-size: 16px;">Kembali</a>
     </div>
 
     <script src="script-quiz.js"></script>
